# path-tracer

./: .gitignore  Cargo.toml  README.md
assets/shaders/: tonemap.frag
src/: axis_aligned_box.rs  box.rs  bvh.rs  camera.rs  hitable.rs  input.rs  lib.rs  main.rs  material.rs  onb.rs  rect.rs  scene.rs  sphere.rs  texture.rs  trace.rs  volume.rs
src/jobs/: mod.rs  thread_pool.rs
src/math/: aabb.rs  mod.rs  noise.rs  random.rs  ray.rs  vec3.rs
src/node/: copy_image.rs  mod.rs  tonemap.rs
src/winit_utils/: mod.rs
