[package]
name = "path_tracer"
version = "0.1.0"
authors = ["Scott"]

[features]
default = ["rendy"]
metal = ["rendy/metal"]
dx12 = ["rendy/dx12"]
vulkan = ["rendy/vulkan"]
empty = ["rendy/empty"]

[dependencies]
rand = "0.6.1"
winapi = "0.3.6"
winit = "0.18.1"
num_cpus = "1.10.0"
lazy_static = "1.3.0"
parking_lot = "0.7.1"

[dependencies.rendy]
optional = true
version = "0.4.1"
features = ["texture-image", "shader-compiler"]