[package]
name = "path_tracer"
version = "0.1.0"
authors = ["Scott"]

[features]
default = ["rendy"]
metal = ["rendy/metal"]
dx12 = ["rendy/dx12"]
vulkan = ["rendy/vulkan"]
empty = ["rendy/empty"]

[profile.dev]
opt-level = 1

[profile.release]
debug = true

[dependencies]
rand = "0.6.1"
winapi = "0.3.6"
num_cpus = "1.10.0"
lazy_static = "1.3.0"
parking_lot = "0.7.1"
env_logger = "0.5"
log = "0.4"
failure = "0.1"
image = "0.22.3"
winit = "0.20.0-alpha5"

[dependencies.rendy]
optional = true
version = "0.5.0"
features = ["init-winit", "base", "texture-image", "shader-compiler", "no-slow-safety-checks"]